# AlertesTaches

./: .gitignore  .replit  README.md  app.json  package-lock.json  package.json  replit.md  replit.nix
.github/workflows/: desktop-release.yml
app/: _layout.tsx
app/(tabs)/: _layout.tsx  about.tsx  index.tsx  settings.tsx  tasks.tsx
app/task/: [index].tsx
components/: AddTaskModal.tsx  HomeButton.tsx  TaskCard.tsx
constants/: colors.ts
context/: TaskContext.tsx
data/: sampleTasks.json
desktop-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
desktop-app/public/: splashscreen.html
desktop-app/scripts/: sync-version.mjs
desktop-app/src/: App.tsx  index.css  main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src/components/: sticky-note-card.tsx
desktop-app/src/components/layout/: sidebar.tsx
desktop-app/src/components/tasks/: task-dialog.tsx
desktop-app/src/components/ui/: chart.tsx  select.tsx
desktop-app/src/hooks/: use-compilation.tsx  use-settings.ts  use-tasks.ts  use-tasks.tsx
desktop-app/src/lib/: backend.ts  excel.ts  store.ts
desktop-app/src/pages/: alerts.tsx  compilation.tsx  dashboard.tsx  import-export.tsx  settings.tsx  splash.tsx  sticky-note.tsx  tasks.tsx
utils/: core.ts  excelExport.ts  notifications.ts  shareJson.ts
