[package]
name = "alertes-taches"
version = "1.1.11"
description = "Alertes Taches - Gestionnaire de planificateur de taches"
authors = ["AbouDjafar"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "alertes_taches_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
